--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.10",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "node-schedule": "^2.1.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "pino": "^7.0.0-rc.9",
