--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "node src/app.js | pino-pretty -i pid,hostname -t 'yyyy-mm-dd HH:MM:ss'",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +14,7 @@
   "dependencies": {
     "dayjs": "^1.11.10",
     "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "node-schedule": "^2.1.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
