--- a/compose.yaml
+++ b/compose.yaml
@@ -17,17 +17,23 @@ services:
       DATABASE: ${DATABASE}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
       CLIENT_ID: ${CLIENT_ID}
       BIRTHDAY_CHANNEL: ${BIRTHDAY_CHANNEL}
+    depends_on:
+      - db
     ports:
-      - 7777:7777
+      - 5002:5002
   db:
     image: postgres
     restart: always
     user: postgres
     environment:
       - POSTGRES_DB=${DATABASE}
-      - POSTGRES_PASSWORD_FILE=${DB_PASSWORD}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    ports:
+      - 5431:5432
     expose:
       - 5432
     healthcheck:
