--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.10",
     "discord.js": "^14.13.0",
     "dotenv": "^16.4.5",
@@ -20,6 +22,7 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "pino": "^7.0.0-rc.9",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "uuid": "^10.0.0"
   }
 }
